--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ branches:
 
 jobs:
   include:
+    - stage: build gem
+      script:
+       - rake build
     - stage: publish gem
       if: tag =~ /^\d\.\d\.\d(?:-\S*)?$/
       script:
