--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ branches:
 
 jobs:
   include:
-    - stage: build gem
+    - stage: build
       script:
        - bundle exec rspec spec
        - bundle exec rake build
-    - stage: publish gem
+    - stage: deploy
       if: branch =~ /^\d\.\d\.\d(?:-\S*)?$/
       script:
        - bundle exec rake build
